--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ go_build:
     - mkdir -p .cache/go
     - export GOCACHE="$CI_PROJECT_DIR/.cache/cache"
     - export GOPATH="$CI_PROJECT_DIR/.cache/go"
-    - go test -race ./...
+    - CGO_ENABLED=1 go test -race ./...
     - mkdir -p build || true
     - go env
     - GOOS=linux GOARCH=amd64 go build -a -ldflags '-extldflags "-static"' -o build/${CI_PROJECT_NAME}-amd64 ./cmd/wg-quick
